--- a/docs/FUNDING.yml
+++ b/docs/FUNDING.yml
@@ -9,4 +9,4 @@ community_bridge: # Replace with a single Community Bridge project-name e.g., cl
 liberapay: Dino
 issuehunt: # Replace with a single IssueHunt username
 otechie: # Replace with a single Otechie username
-custom: https://dino.im/#participate
+custom: https://dino.im/#donate
